# pyidr

./: .pre-commit-config.yaml  .prospector.yml  .pylintrc  .readthedocs.yml  LICENSE  README.rst  pyproject.toml
.github/workflows/: test.yml
docs/: classdocs.rst  conf.py  index.rst  installation.rst  usage.rst
pyidr/: __init__.py  _base.py  _idr.py  _interpolations.py  _stats.py
tests/: __init__.py  conftest.py  test_base.py  test_idr.py  test_pyidr.py  test_stats.py
