[tool.poetry]
name = "pyidr"
version = "0.1.0"
description = "Python implementation of the irreproducible discovery rate"
authors = ["Fabian Hausmann <fabian.hausmann@zmnh.uni-hamburg.de>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
scipy = "^1.4.1"
statsmodels = "^0.11.1"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
rpy2 = "^3.2.6"
ipykernel = "^5.1.4"
pydocstyle = "^5.0.2"
mypy = "^0.770"
pylint = "^2.4.4"
yapf = "^0.29.0"
pytest-cov = "^2.8.1"
sphinx = "^3.0.0"
sphinx_rtd_theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
